format error type to 5 chars

--- a/tinyMediaManager/src/log4j.properties
+++ b/tinyMediaManager/src/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-log4j.appender.CONSOLE.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d %-5p [%t] (%F:%L) - %m%n
 
 # FILE logger
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
@@ -20,4 +20,4 @@ log4j.appender.FILE.MaxFileSize=1024KB
 # Keep two backup file
 log4j.appender.FILE.MaxBackupIndex=2
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.ConversionPattern=%d %p %t (%F:%L) - %m%n
+log4j.appender.FILE.layout.ConversionPattern=%d %-5p [%t] (%F:%L) - %m%n
