--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -36,6 +36,7 @@
 	<classpathentry kind="lib" path="lib/jna.jar"/>
 	<classpathentry kind="lib" path="lib/platform.jar"/>
 	<classpathentry kind="lib" path="lib/fanarttvapi.jar" sourcepath="buildsupport/fanarttvapi-1.4-sources.jar"/>
-	<classpathentry kind="lib" path="lib/freemarker.jar"/>
+	<classpathentry kind="lib" path="lib/asm.jar"/>
+	<classpathentry kind="lib" path="lib/jmte-unbundled.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
