add templates to build distribute new exe for win

--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -8,7 +8,6 @@
     <property name="bin.dir" value="bin" />
     <property name="build.dir" value="build" />
     <property name="dist.dir" value="dist" />
-    <property name="preview.dir" value="preview" /> 
     <property name="getdown" value="getdown.txt" />  <!-- set as property to override in jenkins --> 
 
 	<tstamp>
@@ -32,14 +31,12 @@
         <delete dir="${bin.dir}" />
         <delete dir="${build.dir}" />
         <delete dir="${dist.dir}" />
-    	  <delete dir="${preview.dir}" />
     </target>
 
     <target name="init" depends="clean">
         <mkdir dir="${bin.dir}" />
         <mkdir dir="${build.dir}" />
         <mkdir dir="${dist.dir}" />
-    	  <mkdir dir="${preview.dir}" />
     </target>
 
     <target name="compile" depends="init">
@@ -163,6 +160,9 @@
         <copy todir="${build.dir}/native">
             <fileset dir="native"/>
         </copy>
+        <copy todir="${build.dir}/templates">
+            <fileset dir="templates"/>
+        </copy>
         <copy file="${dist.dir}/tinyMediaManager.exe" tofile="${build.dir}/tinyMediaManager.exe" />
         <copy file="${dist.dir}/tinyMediaManager.sh" tofile="${build.dir}/tinyMediaManager.sh" />
 
@@ -171,27 +171,6 @@
                  classpath="AppBundler/getdown.jar" />
         <digest appdir="${build.dir}" />
     </target>
-	
-	  <target name='create_preview' description="creates the preview" depends='package-app'>
-      <copy todir="${preview.dir}">
-          <fileset dir="${build.dir}"/>
-      </copy>
-      <copy todir="${preview.dir}/native">
-          <fileset dir="native"/>
-      </copy>
-      <copy file="${dist.dir}/tinyMediaManager.exe" tofile="${preview.dir}/tinyMediaManager.exe" />
-      <copy file="${dist.dir}/tinyMediaManager.sh" tofile="${preview.dir}/tinyMediaManager.sh" />
-      <!-- default files, to include in dist -->
-	  	<delete file="${preview.dir}/getdown.txt"></delete>
-	  	<delete file="${preview.dir}/digest.txt"></delete>
-      <copy file="AppBundler/getdown_preview.txt" tofile="${preview.dir}/getdown.txt" />
-      <replace file="${preview.dir}/getdown.txt" token="%SVNREV%" value="${svn.info.revision}"/>
-	  	
-      <!-- finally create checksums -->
-      <taskdef name="digest" classname="com.threerings.getdown.tools.DigesterTask" 
-               classpath="AppBundler/getdown.jar" />
-      <digest appdir="${preview.dir}" />
-	 	</target>
 
     <!--target name="analyze" description="Run analyzers" depends="compile"-->
     <target name="analyze" description="Run analyzers">
