--- a/tinyMediaManager/templates/DetailExampleHtml/template.conf
+++ b/tinyMediaManager/templates/DetailExampleHtml/template.conf
@@ -3,3 +3,4 @@ type=movie
 list=list.jmte
 detail=detail.jmte
 extension=html
+description=Example HTML template with detail pages (link to every page)
