--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -16,7 +16,6 @@
 	<classpathentry kind="lib" path="lib/httpcore.jar"/>
 	<classpathentry kind="lib" path="lib/httpmime.jar"/>
 	<classpathentry kind="lib" path="lib/JSplitButton.jar"/>
-	<classpathentry kind="lib" path="lib/log4j.jar"/>
 	<classpathentry kind="lib" path="lib/themoviedbapi.jar"/>
 	<classpathentry kind="lib" path="lib/thetvdbapi.jar"/>
 	<classpathentry kind="lib" path="lib/JTattoo.jar"/>
@@ -26,7 +25,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/commons-logging.jar"/>
 	<classpathentry kind="lib" path="lib/glazedlists.jar" sourcepath="buildsupport/glazedlists_java15-1.9.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/l2fprod-common-buttonbar.jar"/>
 	<classpathentry kind="lib" path="lib/l2fprod-common-shared.jar"/>
@@ -42,5 +40,9 @@
 	<classpathentry kind="lib" path="lib/DJNativeSwing-SWT.jar"/>
 	<classpathentry kind="lib" path="lib/DJNativeSwing.jar"/>
 	<classpathentry kind="lib" path="lib/org-netbeans-swing-outline-RELEASE73.jar" sourcepath="buildsupport/org-netbeans-swing-outline-RELEASE73-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/logback-core-1.0.11.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/logback-classic-1.0.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
