--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -39,10 +39,10 @@
 	<classpathentry kind="lib" path="lib/jmte-unbundled.jar"/>
 	<classpathentry kind="lib" path="lib/DJNativeSwing-SWT.jar"/>
 	<classpathentry kind="lib" path="lib/DJNativeSwing.jar"/>
-	<classpathentry kind="lib" path="lib/org-netbeans-swing-outline-RELEASE73.jar" sourcepath="buildsupport/org-netbeans-swing-outline-RELEASE73-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.7.5.jar"/>
 	<classpathentry kind="lib" path="lib/logback-core-1.0.11.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
 	<classpathentry kind="lib" path="lib/logback-classic-1.0.11.jar"/>
+	<classpathentry kind="lib" path="lib/outline.jar" sourcepath="buildsupport/org-netbeans-swing-outline-RELEASE73-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
