--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -44,5 +44,6 @@
 	<classpathentry kind="lib" path="lib/logback-classic.jar"/>
 	<classpathentry kind="lib" path="lib/logback-core.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-over-slf4j.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
