fixtate UTF8 for project again???

--- a/tinyMediaManager/.settings/org.eclipse.core.resources.prefs
+++ b/tinyMediaManager/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//locale/messages_de.properties=UTF-8
 encoding//src/messages.properties=UTF-8
+encoding/<project>=UTF-8
