handle the update-the-updater solves the 99% hanging when updating getdown

--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -168,6 +168,7 @@
         </copy>
         <copy file="${dist.dir}/tinyMediaManager.exe" tofile="${build.dir}/tinyMediaManager.exe" />
         <copy file="${dist.dir}/tinyMediaManager.sh" tofile="${build.dir}/tinyMediaManager.sh" />
+        <copy file="AppBundler/getdown.jar" tofile="${build.dir}/getdown-new.jar" />
 
         <!-- finally create checksums -->
         <taskdef name="digest" classname="com.threerings.getdown.tools.DigesterTask" 
