--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -1,7 +1,7 @@
 <project default="create_tmm_jar" name="Tiny Media Manager">
 
     <!-- software revision number -->
-    <property name="version" value="RC1" />
+    <property name="version" value="2.0" />
 
     <!-- build directories -->
     <property name="lib.dir" value="lib" />
