--- a/tinyMediaManager/.settings/org.eclipse.core.resources.prefs
+++ b/tinyMediaManager/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
 encoding//locale/messages_de.properties=UTF-8
+encoding//locale/messages_fr.properties=UTF-8
+encoding//locale/messages_nl.properties=UTF-8
 encoding//src/messages.properties=UTF-8
 encoding/<project>=UTF-8
+encoding/locale=UTF-8
