Commandline app for Windows - rework TMM main - updated launch4j - changet build.xml - set some utf8 props

--- a/tinyMediaManager/.settings/org.eclipse.core.resources.prefs
+++ b/tinyMediaManager/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,10 @@
 eclipse.preferences.version=1
+encoding//locale/messages_cs.properties=UTF-8
 encoding//locale/messages_de.properties=UTF-8
 encoding//locale/messages_fr.properties=UTF-8
 encoding//locale/messages_nl.properties=UTF-8
+encoding//locale/messages_pt.properties=UTF-8
+encoding//locale/messages_sk.properties=UTF-8
 encoding//src/messages.properties=UTF-8
 encoding/<project>=UTF-8
 encoding/locale=UTF-8
