--- a/tinyMediaManager/.settings/org.eclipse.core.resources.prefs
+++ b/tinyMediaManager/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,7 @@ encoding//locale/messages_fr.properties=UTF-8
 encoding//locale/messages_nl.properties=UTF-8
 encoding//locale/messages_pt.properties=UTF-8
 encoding//locale/messages_sk.properties=UTF-8
+encoding//locale/messages_vi.properties=UTF-8
 encoding//src/messages.properties=UTF-8
 encoding/<project>=UTF-8
 encoding/locale=UTF-8
