switched scaling algorithm to imgscalr

--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -47,5 +47,6 @@
 	<classpathentry kind="lib" path="lib/betterbeansbinding-swingbinding.jar"/>
 	<classpathentry kind="lib" path="lib/betterbeansbinding-el.jar"/>
 	<classpathentry kind="lib" path="lib/xmlrpc-client.jar"/>
+	<classpathentry kind="lib" path="lib/imgscalr-lib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
