--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -135,6 +135,7 @@
         <copy file="AppBundler/LICENSE" todir="${build.dir}" />
         <copy file="AppBundler/splashscreen.png" todir="${build.dir}" />
         <copy file="AppBundler/tmm.png" todir="${build.dir}" />
+    	  <copy file="AppBundler/env.txt" todir="${build.dir}" />
 
     	  <!-- Mac OSX -->
         <mkdir dir="${dist.dir}/mac" />
@@ -162,17 +163,17 @@
         <launch4j configFile="AppBundler/launch4jcmd.xml" txtProductVersion="${version}_r${svn.info.revision}"
                   outfile="${dist.dir}/tinyMediaManagerCMD.exe"/>
         <zip destfile="${dist.dir}/tmm_${version}_r${svn.info.revision}_win.zip" level="9">
-            <zipfileset filemode="755" dir="${build.dir}" />
+            <zipfileset filemode="755" dir="${build.dir}" excludes="env.txt" />
             <zipfileset filemode="755" dir="${dist.dir}" includes="*.exe"/>
         </zip>
 
         <!-- Linux -->
         <copy file="AppBundler/tinyMediaManager.sh" todir="${dist.dir}" />
-    	<copy file="AppBundler/tinyMediaManagerCMD.sh" todir="${dist.dir}" />
+    	  <copy file="AppBundler/tinyMediaManagerCMD.sh" todir="${dist.dir}" />
         <chmod file="${dist.dir}/tinyMediaManager.sh" perm="ugo+rx" />
-    	<chmod file="${dist.dir}/tinyMediaManagerCMD.sh" perm="ugo+rx" />
+    	  <chmod file="${dist.dir}/tinyMediaManagerCMD.sh" perm="ugo+rx" />
         <tar destfile="${dist.dir}/tmm_${version}_r${svn.info.revision}_linux.tar" >
-            <tarfileset dir="${build.dir}"/>
+            <tarfileset dir="${build.dir}" excludes="env.txt"/>
             <tarfileset dir="${dist.dir}" includes="*.sh"/>
         </tar>
         <gzip destfile="${dist.dir}/tmm_${version}_r${svn.info.revision}_linux.tar.gz" src="${dist.dir}/tmm_${version}_r${svn.info.revision}_linux.tar" />
