--- a/.classpath
+++ b/.classpath
@@ -48,5 +48,7 @@
 	<classpathentry kind="lib" path="lib/betterbeansbinding-el.jar"/>
 	<classpathentry kind="lib" path="lib/xmlrpc-client.jar"/>
 	<classpathentry kind="lib" path="lib/imgscalr-lib.jar"/>
+	<classpathentry kind="lib" path="lib/core.jar"/>
+	<classpathentry kind="lib" path="lib/twinkle.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
