disabled optimistic locking (multiple entity managers write the objects..)

--- a/objectdb.conf
+++ b/objectdb.conf
@@ -15,7 +15,7 @@
 		<size initial="256kb" resize="256kb" page="2kb" />
 		<recovery enabled="true" sync="false" path="." max="128mb" />
 		<recording enabled="false" sync="false" path="." mode="write" />
-		<locking version-check="true" />
+		<locking version-check="false" />
 		<processing cache="64mb" max-threads="10" /> 
 		<query-cache results="32mb" programs="500" />
 		<extensions drop="temp,tmp" />
