--- a/.classpath
+++ b/.classpath
@@ -50,5 +50,6 @@
 	<classpathentry kind="lib" path="lib/core.jar"/>
 	<classpathentry kind="lib" path="lib/twinkle.jar"/>
 	<classpathentry kind="lib" path="lib/JTattoo.jar"/>
+	<classpathentry kind="lib" path="lib/api-common.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
