eye candy for the what's new dialog

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//locale/messages_cs.properties=UTF-8
 encoding//locale/messages_de.properties=UTF-8
 encoding//locale/messages_fr.properties=UTF-8
+encoding//locale/messages_ko.properties=UTF-8
 encoding//locale/messages_nl.properties=UTF-8
 encoding//locale/messages_pt.properties=UTF-8
 encoding//locale/messages_sk.properties=UTF-8
