Windows: use precompiled EXEs, allow self-update

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project default="create_tmm_jar" name="Tiny Media Manager">
 
     <!-- software revision number -->
-    <property name="version" value="2.5" />
+    <property name="version" value="2.6" />
 
     <!-- build directories -->
     <property name="lib.dir" value="lib" />
@@ -168,12 +168,15 @@
         </zip>
 
         <!-- Windows -->
+        <!-- do not generate everytime - use exitsing ones
         <taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" 
                  classpath="AppBundler/launch4j/launch4j.jar:AppBundler/launch4j/xstream.jar" />
         <launch4j configFile="AppBundler/launch4j.xml" txtProductVersion="${version}_r${svn.info.revision}"
                   outfile="${dist.dir}/tinyMediaManager.exe"/>
         <launch4j configFile="AppBundler/launch4jcmd.xml" txtProductVersion="${version}_r${svn.info.revision}"
-                  outfile="${dist.dir}/tinyMediaManagerCMD.exe"/>
+                  outfile="${dist.dir}/tinyMediaManagerCMD.exe"/-->
+        <copy file="AppBundler/tinyMediaManager.exe" tofile="${dist.dir}/tinyMediaManager.exe" />
+        <copy file="AppBundler/tinyMediaManagerCMD.exe" tofile="${dist.dir}/tinyMediaManagerCMD.exe" />
         <zip destfile="${dist.dir}/tmm_${version}_r${svn.info.revision}_win.zip" level="9">
             <zipfileset filemode="755" dir="${build.dir}" excludes="env.txt" />
             <zipfileset filemode="755" dir="${dist.dir}" includes="*.exe"/>
@@ -181,9 +184,9 @@
 
         <!-- Linux -->
         <copy file="AppBundler/tinyMediaManager.sh" todir="${dist.dir}" />
-    	  <copy file="AppBundler/tinyMediaManagerCMD.sh" todir="${dist.dir}" />
+        <copy file="AppBundler/tinyMediaManagerCMD.sh" todir="${dist.dir}" />
         <chmod file="${dist.dir}/tinyMediaManager.sh" perm="ugo+rx" />
-    	  <chmod file="${dist.dir}/tinyMediaManagerCMD.sh" perm="ugo+rx" />
+        <chmod file="${dist.dir}/tinyMediaManagerCMD.sh" perm="ugo+rx" />
         <tar destfile="${dist.dir}/tmm_${version}_r${svn.info.revision}_linux.tar" >
             <tarfileset dir="${build.dir}" excludes="env.txt"/>
             <tarfileset dir="${dist.dir}" includes="*.sh"/>
@@ -200,10 +203,10 @@
         <copy todir="${build.dir}/locale">
             <fileset dir="locale"/>
         </copy>
-        <copy file="${dist.dir}/tinyMediaManager.exe" tofile="${build.dir}/tinyMediaManager.exe" />
-        <copy file="${dist.dir}/tinyMediaManagerCMD.exe" tofile="${build.dir}/tinyMediaManagerCMD.exe" />
+        <copy file="AppBundler/tinyMediaManager.exe" tofile="${build.dir}/tinyMediaManager.exe.new" />
+        <copy file="AppBundler/tinyMediaManagerCMD.exe" tofile="${build.dir}/tinyMediaManagerCMD.exe" />
         <copy file="${dist.dir}/tinyMediaManager.sh" tofile="${build.dir}/tinyMediaManager.sh" />
-    	<copy file="${dist.dir}/tinyMediaManagerCMD.sh" tofile="${build.dir}/tinyMediaManagerCMD.sh" />
+        <copy file="${dist.dir}/tinyMediaManagerCMD.sh" tofile="${build.dir}/tinyMediaManagerCMD.sh" />
         <copy file="AppBundler/getdown.jar" tofile="${build.dir}/getdown-new.jar" />
 
         <!-- finally create checksums -->
