fix crash when cancelling die movie chooser less problematic when MI could not be loaded objectdb changes

--- a/objectdb.conf
+++ b/objectdb.conf
@@ -24,6 +24,7 @@
 	<entities>
 		<enhancement agent="false" reflection="warning" />
 		<cache ref="weak" level2="0" />
+		<fetch hollow="false" />
 		<persist serialization="false" />
 		<cascade-persist always="auto" on-persist="false" on-commit="true" />
 		<dirty-tracking arrays="false" />
