--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -11,6 +11,7 @@ encoding//locale/messages_pt.properties=UTF-8
 encoding//locale/messages_ru.properties=UTF-8
 encoding//locale/messages_sk.properties=UTF-8
 encoding//locale/messages_vi.properties=UTF-8
+encoding//locale/messages_zh.properties=UTF-8
 encoding//src/messages.properties=UTF-8
 encoding/<project>=UTF-8
 encoding/locale=UTF-8
