--- a/.classpath
+++ b/.classpath
@@ -50,5 +50,8 @@
 	<classpathentry kind="lib" path="lib/JTattoo.jar"/>
 	<classpathentry kind="lib" path="lib/api-common.jar"/>
 	<classpathentry kind="lib" path="lib/LightBox.jar"/>
+	<classpathentry kind="lib" path="lib/retrofit.jar"/>
+	<classpathentry kind="lib" path="lib/trakt-java.jar" sourcepath="buildsupport/trakt-java-3.1.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/gson.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
