--- a/.classpath
+++ b/.classpath
@@ -53,5 +53,7 @@
 	<classpathentry kind="lib" path="lib/retrofit.jar" sourcepath="buildsupport/retrofit-1.5.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/trakt-java.jar" sourcepath="buildsupport/trakt-java-3.1.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/gson.jar"/>
+	<classpathentry kind="lib" path="lib/task-dialog.jar"/>
+	<classpathentry kind="lib" path="lib/miglayout-swing.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
